# quick-tips-awscdk

./: .pre-commit-config.yaml  README.md  pyproject.toml
context-from-file/: .gitignore  __main__.py  cdk.json  config.toml
stack-names/: __main__.py
